--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,12 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/drawer_recyclerView"
-        android:layout_width="@dimen/nav_drawer_width"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/drawer_listView_background"
-        android:elevation="6dp" />
+        app:menu="@menu/menu_drawer"
+        app:theme="@style/AppTheme.Drawer" />
 
 </android.support.v4.widget.DrawerLayout>
