--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <style name="AppTheme.Drawer">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
