--- a/app/src/main/res/layout/activity_infinite_series.xml
+++ b/app/src/main/res/layout/activity_infinite_series.xml
@@ -19,7 +19,6 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_infinite_series" />
@@ -30,5 +29,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_media_play" />
+        android:src="@mipmap/ic_play_arrow_white_24dp" />
 </android.support.design.widget.CoordinatorLayout>
