--- a/app/src/main/res/menu/menu_infinite_series.xml
+++ b/app/src/main/res/menu/menu_infinite_series.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_learnMore"
+        android:icon="@mipmap/ic_info_white_24dp"
         android:title="@string/learn_more"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
