--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,4 +21,9 @@
         android:id="@+id/number"
         android:title="@string/number"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_action_theme"
+        android:title="@string/theme_ellipsis"
+        app:showAsAction="never" />
 </menu>
